fixed mobile navbar issue with content cutoff

--- a/docs/style/mobile.css
+++ b/docs/style/mobile.css
@@ -3,6 +3,7 @@
 }
 
 .content{
+    width: 100vw;
     left: 0;
 }
 
